--- a/index.html
+++ b/index.html
@@ -7,8 +7,36 @@
     <title>Function Exercise</title>
 </head>
 <body>
-    
+    <!--  instructions -->
+    <div id="instructions"></div>
     <div id="messages"></div>
+    <div id="main-area" style="width: 30%">
+        <div class="theme-map" id="area1">1</div>
+        <div class="theme-map" id="area2">2</div>
+        <div class="theme-map" id="area3">3</div>
+        <div class="theme-map" id="area4">4</div>
+        <div class="theme-map" id="area5">5</div>
+        <div class="theme-map" id="area6">6</div>
+        <div class="theme-map" id="area7">7</div>
+        <div class="theme-map" id="area8">8</div>
+    </div>
     <script src="main.js"></script>
+    <script type="text/javascript">
+
+        function sayhello(e) {
+            console.log(e.target.id)
+            if(e.target.id === mapArea[i]){
+                instructions
+            }
+        } // This is where we call promise
+
+
+        let things = document.getElementsByClassName("theme-map");
+        console.log("things", things);
+        for(var i = 0; i < things.length; i++) {
+            things[i].addEventListener("click", sayhello);
+            
+        } console.log("sayhello", sayhello);
+    </script>
 </body>
 </html>
